maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:47: error: ';' expected but ',' found.
  var yModDir = {1, 0, -1, 0}
                  ^